--- a/templates/base.html
+++ b/templates/base.html
@@ -220,10 +220,29 @@
                 </div>
             </div>
         {% endif %}
+    </div>
 
-
+    <div class="container-fluid">
         {% block content %}
+            <div class="row">
+            <div class="col-md-12">
+                <div class="container jumbo-test">
+                    <div class="jumbotron">
+                        <h1 class="display-3">{% block jumbotron-title %}Bienvenido al Sistema
+                            SIGIA!{% endblock %}</h1>
+                        <p class="lead">{% block jumbotron-subtitle %}Lorem Ipsum{% endblock %}</p>
+                        <hr class="my-4">
+                        <p>{% block jumbotron-content %}It uses utility classes for typography and spacing to space
+                            content out within the larger
+                            container.{% endblock %}</p>
+                        <p class="lead">
+                            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
         {% endblock %}
+        </div>
 
 
     </div>
