--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,7 @@
                             <a class="dropdown-item" href="{% url 'actividad:pendientes' %}">Actividades</a>
                             <div class="dropdown-divider"></div>
                             {#  Anteproyectos y Trabajos de Grado #}
-                            <a class="dropdown-item" href="#">Anteproyecto</a>
+                            <a class="dropdown-item" href="{% url 'actividad:pendientes' %}">Anteproyecto</a>
                             <div class="dropdown-divider"></div>
                             {# Solicitud #}
                             <a class="dropdown-item" href="{% url 'solicitud:lista' %}">Solicitud</a>
