Campos de duracion a las actividades y cambio al "path" de los archivos cargados

--- a/templates/includes/header/partial_unidad_dropdown.html
+++ b/templates/includes/header/partial_unidad_dropdown.html
@@ -15,11 +15,16 @@
                href="{% url 'inventario:facultad-equipo' request.user.perfil.unidad.pk %}">Equipos
                 <span
                         class="badge badge-primary">{{ request.user.perfil.unidad.equipos.count }}</span></a>
-            <a class="dropdown-item" href="#">Profesores</a>
-            <a class="dropdown-item" href="#">Estudiantes</a>
-            <a class="dropdown-item" href="#">Actividades</a>
-            <a class="dropdown-item" href="#">Anteproyectos</a>
-            <a class="dropdown-item" href="#">Trabajos de Graduacion</a>
+            <a class="dropdown-item" href="#">Profesores <span
+                    class="badge badge-primary">{{ request.user.perfil.unidad.personal.profesores.count }}</span></a>
+            <a class="dropdown-item" href="#">Estudiantes <span
+                        class="badge badge-primary">{{ request.user.perfil.unidad.estudiantes.count }}</span></a>
+            <a class="dropdown-item" href="#">Actividades <span
+                        class="badge badge-primary">{{ request.user.perfil.unidad.actividades.count }}</span></a>
+            <a class="dropdown-item" href="#">Anteproyectos <span
+                        class="badge badge-primary">{{ request.user.perfil.unidad.anteproyectos.count }}</span></a>
+            <a class="dropdown-item" href="#">Trabajos de Graduacion <span
+                        class="badge badge-primary">{{ request.user.perfil.unidad.proyectos.count }}</span></a>
         </div>
     {% endif %}
 </li>
